--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,11 @@ p {
   font-size: 1.7rem;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 @media (min-width:600px) {
   h1 {
     font-size: 5rem;
