--- a/src/components/Pages/home.css
+++ b/src/components/Pages/home.css
@@ -2,6 +2,10 @@
   width: 100%;
   height: 93vh;
   text-align: center;
+  background-image: url('../../assets/images/bg-pattern.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .hero-background {
@@ -16,4 +20,10 @@
 .hero-logo {
   width: 240px;
   margin-top: calc(50% + 7vh);
+}
+
+@media (min-width:600px) {
+  .hero-logo {
+    margin-top: calc(30% + 7vh);
+  }
 }
