--- a/src/components/product/product-card.css
+++ b/src/components/product/product-card.css
@@ -21,6 +21,12 @@
   padding: 2rem 1rem;
 }
 
-.meal-link {
+.meal-link a {
   text-decoration: none;
+  font-weight: bold;
+  color: var(--black);
+}
+
+.meal-link a:hover {
+  text-decoration: underline;
 }
